2002-06-28  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.05 released.

	* ANSIColor.pm: Update the formatting style, add a pointer to the
	module web site, use L<> for URLs, and use naked <>s where
	permissible rather than E<lt> and E<gt>.  Renamed LICENSE to
	COPYRIGHT AND LICENSE.

2002-02-14  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Added a mention of the specific Windows consoles
	that don't work with this module.

2001-07-10  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.04 released.

	* ANSIColor.pm: Add documentation, examples, and diagnostics for
	uncolor.  Document ANSI_COLORS_DISABLED.  Add information about
	the relevant standards for these escape sequences and the
	additional ones that aren't supported by this module.  Add a
	pointer to the relevant standards.  Add a LICENSE section.  Update
	Zenin's e-mail address.

	* ANSIColor.pm (AUTOLOAD): Add support for ANSI_COLORS_DISABLED.
	(color): Likewise.
	(colored): Likewise.
	* test.pl: Add tests for ANSI_COLORS_DISABLED.

	* ANSIColor.pm (uncolor): New function.
	* test.pl: Add a test for it.

2000-08-06  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.03 released.

	* Makefile.PL: Install in the Perl library directory for Perl
	versions >= 5.6.0.

	* test.pl: Added a new test for the array reference syntax for
	colored.

	* ANSIColor.pm: Changed $VERSION to a static string.  Added dark
	to the attributes.  Updated the documentation to include a table
	of supported attributes on different terminal emulators, to add
	dark, to document the new optional way to call colored, and to
	mark the diagnostics as fatal errors or warnings.
	(colored): Allow the attributes to be passed as an initial array
	reference as well as a final list, and for that calling syntax
	take the rest of the arguments as text to be colored.

1998-11-27  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 1.02 released.
