@@ -1,4 +1,4 @@
-                       Term::ANSIColor version 1.05
+                       Term::ANSIColor version 1.06
               (A simple ANSI text attribute control module)
 
   Copyright 1996, 1997, 1998, 2000, 2001, 2002
