@@ -1,3 +1,10 @@
+2002-12-09  Russ Allbery  <rra@stanford.edu>
+
+	* ANSIColor.pm: Version 1.06 released to synchronize the version
+	on CPAN with the version in Perl core.
+
+	* ANSIColor.pm: Fix typo in L<> link in documentation.
+
 2002-06-28  Russ Allbery  <rra@stanford.edu>
 
 	* ANSIColor.pm: Version 1.05 released.
